lib/string_hash.treetop
grammar StringHash
  rule general
    hash # / hash_comp / componente / string / symbol
  end
  rule hash
   '{' hash_comp? '}'
  end
  rule hash_comp
   componente list_componente*
  end
  rule list_componente
    ', ' componente 
  end
  rule componente
    ( hash / symbol / string / number) arrow ( number / symbol / string / hash )
  end 
  rule string
    '"' string_content '"'
  end
  rule string_content
    ( '\\"' )* ( [^'"'] string_content / [^'"'] )
  end
  rule arrow
    '=>'
  end
  rule symbol
    ':' [a-zA-Z] symbol_content 
  end
  rule symbol_content
     ( [a-zA-Z0-9_] symbol_content ) / epsilon
  end
  rule number
   [0-9] [0-9]*
  end
  rule epsilon
    ''
  end
end
